fix css alignment

--- a/client/src/assets/styles/main.css
+++ b/client/src/assets/styles/main.css
@@ -8,10 +8,10 @@
     @apply bg-olive-200 m-1 mt-3 rounded-md p-1 text-lg
 }
 .vertical-container {
-    @apply flex justify-center flex-col
+    @apply flex justify-center flex-col items-center
 }
 .horisontal-container {
-    @apply flex justify-center
+    @apply flex justify-center items-center
 }
 .box {
     @apply bg-light-blue flex flex-col text-lg items-center rounded-md
